--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -52,6 +53,7 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/todo-frontend/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
@@ -63,6 +65,7 @@ jobs:
         npm install
         npm run build
         npm test
+
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -75,6 +78,7 @@ jobs:
         mkdir -p ~/.docker/cli-plugins/
         curl -SL "https://github.com/docker/compose/releases/download/$LATEST_VERSION/docker-compose-$(uname -s)-$(uname -m)" -o ~/.docker/cli-plugins/docker-compose
         chmod +x ~/.docker/cli-plugins/docker-compose
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -98,46 +102,50 @@ jobs:
           CURRENT_ENV=$(cat deployment-environment)
         else
           CURRENT_ENV="blue"
+        fi
         NEXT_ENV=$([[ $CURRENT_ENV == "blue" ]] && echo "green" || echo "blue")
         echo "current_env=$CURRENT_ENV" >> $GITHUB_OUTPUT
         echo "next_env=$NEXT_ENV" >> $GITHUB_OUTPUT
 
     - name: Build and push Docker images
       env:
-        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
+        NEXT_ENV: ${{ steps.set-env.outputs.next_env }}
       run: |
         docker compose -f docker-compose.$NEXT_ENV.yml build
         docker compose -f docker-compose.$NEXT_ENV.yml push
 
     - name: Deploy to server
       env:
-        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
-        CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
+        NEXT_ENV: ${{ steps.set-env.outputs.next_env }}
+        CURRENT_ENV: ${{ steps.set-env.outputs.current_env }}
       run: |
         # Start the new environment
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
 
         # Wait for all services in the new environment to be healthy
         timeout 120s bash -c 'until docker compose -f docker-compose.$NEXT_ENV.yml ps | grep -q healthy; do sleep 2; done'
+        
         # Update Nginx configuration
-        sed -i "s/server frontend-\$CURRENT_ENV:3000;/server frontend-$CURRENT_ENV:3000 backup;/" nginx.conf
-        sed -i "s/server frontend-\$NEXT_ENV:3000 backup;/server frontend-$NEXT_ENV:3000;/" nginx.conf
-        sed -i "s/server backend-\$CURRENT_ENV:8080;/server backend-$CURRENT_ENV:8080 backup;/" nginx.conf
-        sed -i "s/server backend-\$NEXT_ENV:8080 backup;/server backend-$NEXT_ENV:8080;/" nginx.conf
+        sed -i "s/server frontend-$CURRENT_ENV:3000;/server frontend-$CURRENT_ENV:3000 backup;/" nginx.conf
+        sed -i "s/server frontend-$NEXT_ENV:3000 backup;/server frontend-$NEXT_ENV:3000;/" nginx.conf
+        sed -i "s/server backend-$CURRENT_ENV:8080;/server backend-$CURRENT_ENV:8080 backup;/" nginx.conf
+        sed -i "s/server backend-$NEXT_ENV:8080 backup;/server backend-$NEXT_ENV:8080;/" nginx.conf
 
         # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$NEXT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
         docker compose -f docker-compose.$CURRENT_ENV.yml up -d
-        docker ps
         # Reload Nginx configuration
         docker compose -f docker-compose.$NEXT_ENV.yml exec -T nginx nginx -s reload
 
     - name: Update current environment
       if: success()
       env:
-        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
+        NEXT_ENV: ${{ steps.set-env.outputs.next_env }}
       run: |
         echo $NEXT_ENV > deployment-environment
+
+    - name: Upload deployment environment artifact
+      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: deployment-environment
@@ -146,8 +154,8 @@ jobs:
     - name: Rollback on failure
       if: failure()
       env:
-        CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
-        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
+        CURRENT_ENV: ${{ steps.set-env.outputs.current_env }}
+        NEXT_ENV: ${{ steps.set-env.outputs.next_env }}
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml up -d
         
@@ -155,17 +163,19 @@ jobs:
         timeout 120s bash -c 'until docker compose -f docker-compose.$CURRENT_ENV.yml ps | grep -q healthy; do sleep 2; done'
 
         # Revert Nginx configuration
-        sed -i "s/server frontend-\$CURRENT_ENV:3000;/server frontend-$CURRENT_ENV:3000 backup;/" nginx.conf
-        sed -i "s/server frontend-\$NEXT_ENV:3000 backup;/server frontend-$NEXT_ENV:3000;/" nginx.conf
-        sed -i "s/server backend-\$CURRENT_ENV:8080;/server backend-$CURRENT_ENV:8080 backup;/" nginx.conf
-        sed -i "s/server backend-\$NEXT_ENV:8080 backup;/server backend-$NEXT_ENV:8080;/" nginx.conf
-
+        sed -i "s/server frontend-$CURRENT_ENV:3000 backup;/server frontend-$CURRENT_ENV:3000;/" nginx.conf
+        sed -i "s/server frontend-$NEXT_ENV:3000;/server frontend-$NEXT_ENV:3000 backup;/" nginx.conf
+        sed -i "s/server backend-$CURRENT_ENV:8080 backup;/server backend-$CURRENT_ENV:8080;/" nginx.conf
+        sed -i "s/server backend-$NEXT_ENV:8080;/server backend-$NEXT_ENV:8080 backup;/" nginx.conf
         
         # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$CURRENT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
         
         # Reload Nginx configuration
         docker compose -f docker-compose.$CURRENT_ENV.yml exec -T nginx nginx -s reload
+
+    - name: Upload rollback environment artifact
+      if: failure()
       uses: actions/upload-artifact@v4
       with:
         name: deployment-environment
@@ -174,6 +184,6 @@ jobs:
     - name: Clean up old environment
       if: success()
       env:
-        CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
+        CURRENT_ENV: ${{ steps.set-env.outputs.current_env }}
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml down
