--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,10 +124,9 @@ jobs:
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{secrets.SERVER_USER }}
-        password : ${{ secrets.SERVER_PASSWORD }}
+        key : ${{ secrets.SERVER_KEY }}
         port: ${{ secrets.SERVER_PORT }}
         script: |
-          whoiam
           docker pull ${{ secrets.DOCKER_USERNAME }}/todo_list-backend:$NEXT_ENV
           docker pull ${{ secrets.DOCKER_USERNAME }}/todo_list-frontend:$NEXT_ENV
 
