--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -176,3 +176,16 @@ jobs:
         CURRENT_ENV: ${{ steps.set-env.outputs.current_env }}
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml down
+    
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+  
+    - name: Deploy Backend to Heroku
+      if: success()
+      uses: akhileshns/heroku-deploy@v3.13.15
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: "todo-backend-thanh2k4"
+        heroku_email: "nvthanh12102004@gmail.com"
+        appdir: "todo-backend"
